--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
                 <p>새롭게 입가를<br>찾아온 매력</p>
             </div>
         </section>
+
         <section class="scroll-section" id="scroll-section-1">
             <p class="description">
                 <strong>보통 스크롤 영역</strong>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima dicta cum et quisquam nihil numquam illo odio quasi dignissimos modi corporis eligendi aut ipsa fugiat minus, cumque assumenda nisi amet debitis earum. Optio inventore esse molestiae! Nobis asperiores quasi tempore impedit autem! Cupiditate magni quia quasi, laboriosam fugit at nulla voluptatibus sequi unde praesentium optio sunt quis excepturi aliquid iste doloremque! Eaque qui, et, possimus inventore voluptatibus recusandae praesentium quasi, mollitia porro laborum repudiandae corrupti perferendis. Magnam aliquam dicta, incidunt blanditiis, nostrum quam adipisci odit architecto, voluptatem ex doloribus! Atque hic necessitatibus asperiores optio dolor quam ipsam magnam eveniet veniam, eos exercitationem dolorem iure quibusdam? Placeat omnis sint optio architecto quidem enim magnam iusto excepturi, eaque, dolorem a iste dolorum accusamus laudantium odit suscipit nam culpa esse reiciendis, similique beatae molestias assumenda illum. Officiis, rem eveniet tempore eligendi facilis ipsum? Repellendus at consequatur deserunt odit fugit provident maxime deleniti, necessitatibus vero, soluta voluptatem minima eum, suscipit ullam blanditiis? Ipsum nostrum ipsa nobis consectetur repellendus impedit cum assumenda corrupti accusamus quos, delectus deleniti nesciunt ex doloribus, ad officiis quo earum est, animi modi. Reiciendis repellendus, ipsam et impedit odio illo perspiciatis voluptatibus placeat libero quasi repellat voluptate blanditiis nesciunt pariatur earum.
             </p>
         </section>
+
         <section class="scroll-section" id="scroll-section-2">
             <div class="sticky-elem main-message">
                 <p>
@@ -70,6 +72,7 @@
 				<div class="pin"></div>
 			</div>
         </section>
+
         <section class="scroll-section" id="scroll-section-3">
             <p class="mid-message">
 				<strong>Retina 머그</strong><br>
@@ -80,6 +83,11 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
             </p>
         </section>
+        <footer class="footer">
+            2020, JS Creation
+        </footer>
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
